@@ -49,6 +49,9 @@ Major changes since man-db 2.6.7.1:
 
 	o 'man -H' shows a better error message if no browser is configured.
 
+	o zsoelim is now installed in $pkglibexecdir, to avoid clashes with
+	  other packages.
+
 man-db 2.6.7.1 (10 April 2014)
 ==============================
 
